Fix T73914 Overlay: Unable to select bone in pose mode

It was caused by the bone selection overlay that was delaying the
xray pass. But OVERLAY_pose_draw were never called when doing selection.